--- a/main.html
+++ b/main.html
@@ -3,43 +3,169 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile Page</title>
-    <link rel="stylesheet" href="styles.css"> <!-- CSS file link -->
+    <title>Profile Card</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f5f5f5;
+            padding: 20px;
+        }
+
+        .profile-card {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            width: 100%;
+            max-width: 900px;
+            display: flex;
+            gap: 30px;
+        }
+
+        .left-section {
+            flex: 1;
+        }
+
+        .profile-image {
+            width: 200px;
+            height: 250px;
+            object-fit: cover;
+            border-radius: 4px;
+            margin-bottom: 20px;
+        }
+
+        .profile-info {
+            margin-bottom: 20px;
+        }
+
+        .profile-info p {
+            margin-bottom: 8px;
+            color: #666;
+        }
+
+        .profile-info strong {
+            color: #333;
+        }
+
+        .skills {
+            margin-top: 30px;
+        }
+
+        .skill-item {
+            margin-bottom: 15px;
+        }
+
+        .skill-icons {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 5px;
+        }
+
+        .skill-bar {
+            height: 8px;
+            background-color: #e0e0e0;
+            border-radius: 4px;
+            overflow: hidden;
+        }
+
+        .skill-progress {
+            height: 100%;
+            background-color: #007bff;
+            border-radius: 4px;
+        }
+
+        .right-section {
+            flex: 1;
+        }
+
+        .about-me {
+            padding: 20px 0;
+        }
+
+        .about-me h2 {
+            color: #333;
+            margin-bottom: 20px;
+            position: relative;
+        }
+
+        .about-me h2::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 100px;
+            height: 3px;
+            background-color: #007bff;
+        }
+
+        .about-me p {
+            color: #666;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-		  <section id="name">
-            <h1>Name</h1>
-            <p>Your Full Name</p>
-        </section>
-		  <section id="email">
-            <h1>Email</h1>
-            <p>your.email@example.com</p>
-        </section>
-
-        <section id="profile">
-            <h1>Profile</h1>
-            <p>Profile you are applying for</p>
-        </section>
-
-        <section id="about-me">
-            <h1>About Me</h1>
-            <p>A brief description about yourself.</p>
-        </section>
-		 <section id="skills">
-            <h1>Skills</h1>
-            <div class="skill">
-                <p>HTML</p>
-                <div class="progress-bar">
-                    <div class="progress" style="width: 90%;">90%</div>
+    <div class="profile-card">
+        <div class="left-section">
+            <img src="profile-image.jpg" alt="Profile" class="profile-image">
+            <div class="profile-info">
+                <p><strong>Name:</strong> Shubham Bhola</p>
+                <p><strong>Profile:</strong> Software Developer</p>
+                <p><strong>Email:</strong> abcdef796@gmail.com</p>
+            </div>
+            <div class="skills">
+                <div class="skill-item">
+                    <div class="skill-icons">
+                        <span>REACT CSS JAVASCRIPT</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" style="width: 95%"></div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <div class="skill-icons">
+                        <span>NODEJS MONGODB</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" style="width: 90%"></div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <div class="skill-icons">
+                        <span>C/C++ PYTHON BATCH</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" style="width: 99%"></div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <div class="skill-icons">
+                        <span>AWS HADOOP</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" style="width: 93%"></div>
+                    </div>
                 </div>
             </div>
-            <div class="skill">
-                <p>CSS</p>
-                <div class="progress-bar">
-                    <div class="progress" style="width: 80%;">80%</div>
-                </div>
+        </div>
+        <div class="right-section">
+            <div class="about-me">
+                <h2>About me</h2>
+                <p>I am a Self-starter with a passion to adapt and evangelise new technologies. I have a passion for software development with a diverse skillset ranging from the MERN stack to a stronghold on data structures and algorithms. I like to tackle complex challenges head-on to deliver technically sound solutions with optimum efficiency.</p>
+                <p>I believe that magic is possible with a blend of imagination, hard-work and passion. Most of all, I believe in determination and honest efforts to enhance my skills in order to contribute to the growth of society.</p>
             </div>
-        </section>
+        </div>
+    </div>
 </body>
 </html>
