--- a/main.html
+++ b/main.html
@@ -118,7 +118,7 @@
 <body>
     <div class="profile-card">
         <div class="left-section">
-            <img src="profile-image.jpg" alt="Profile" class="profile-image">
+            <img src="image1.jpg" alt="Profile" class="profile-image">
             <div class="profile-info">
                 <p><strong>Name:</strong> Shubham Bhola</p>
                 <p><strong>Profile:</strong> Software Developer</p>
