--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- CSS file link -->
 </head>
 <body>
+
     <!-- Name Section -->
     <section>
         <h1>Name</h1>
@@ -16,13 +17,13 @@
     <!-- Email Section -->
     <section>
         <h1>Email</h1>
-        <p>your.email@example.com</p>
+        <p>Your Email Address</p>
     </section>
 
     <!-- Profile Section -->
     <section>
         <h1>Profile</h1>
-        <p>Profile description here</p>
+        <p>Your Profile Description</p>
     </section>
 
     <!-- About Me Section -->
@@ -35,18 +36,25 @@
     <section>
         <h1>Skills</h1>
         <div class="skill">
-            <p>HTML</p>
+            <h2>Skill 1</h2>
             <div class="progress-bar">
                 <div class="progress" style="width: 80%;"></div>
             </div>
         </div>
         <div class="skill">
-            <p>CSS</p>
+            <h2>Skill 2</h2>
             <div class="progress-bar">
-                <div class="progress" style="width: 70%;"></div>
+                <div class="progress" style="width: 60%;"></div>
             </div>
         </div>
         <!-- Add more skills as needed -->
     </section>
+
+    <!-- Picture Section -->
+    <section>
+        <h1>My Picture</h1>
+        <img src="your-image-url.jpg" alt="Your Name" width="200">
+    </section>
+
 </body>
 </html>
